--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,10 @@ machine:
         - sudo tar -C /usr/local -xzf download/$GODIST
     services:
         - docker
+        
+dependences:
+    override:
+
 test:
     override:
         - make test
