update gopath stuff

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,9 @@ machine:
 
 dependencies:
     override:
-        - echo "default ignored"
+        - mkdir -p "$GOPATH/src/$IMPORT_PATH"
+        - rsync -azC --delete ./ "$GOPATH/src/$IMPORT_PATH/"
+        
 test:
     override:
         - make test
