--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
         GODIST: "go1.7.1.linux-amd64.tar.gz"
         IMPORT_PATH: "github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
         GOPATH: "/home/ubuntu/.go_workspace"
+        CIRCLE_ARTIFACTS: "~/.go_workspace/src/$IMPORT_PATH/bin"
     post:
         - mkdir -p download
         - test -e download/$GODIST || curl -o download/$GODIST https://storage.googleapis.com/golang/$GODIST
@@ -26,6 +27,3 @@ test:
     post:
         - make all:
             pwd: "../.go_workspace/src/$IMPORT_PATH"
-general:
-    artifacts:
-        - "~/.go_workspace/src/$IMPORT_PATH/bin"
