--- a/circle.yml
+++ b/circle.yml
@@ -33,5 +33,7 @@ deployment:
             - make all:
                 pwd: "../.go_workspace/src/$IMPORT_PATH"
             - cp -rp ../.go_workspace/src/$IMPORT_PATH/bin/* $CIRCLE_ARTIFACTS
+            - rm $CIRCLE_ARTIFACTS/$CIRCLE_PROJECT_REPONAME
+            - for i in $CIRCLE_ARTIFACTS/*/; do zip -r "$CIRCLE_ARTIFACTS/${i%/}.zip" "$i"; done
             - go get github.com/tcnksm/ghr
             - ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` $CIRCLE_ARTIFACTS/
