--- a/circle.yml
+++ b/circle.yml
@@ -32,9 +32,9 @@ deployment:
                 pwd: "../.go_workspace/src/$IMPORT_PATH"
             - make all:
                 pwd: "../.go_workspace/src/$IMPORT_PATH"
+            - for i in */; do cd ~/.go_workspace/src/$IMPORT_PATH/bin/${i%/}; zip ${i%/}.zip *; mv ${i%/}.zip ../; done:
+                pwd: "../.go_workspace/src/$IMPORT_PATH/bin"
             - cp -rp ../.go_workspace/src/$IMPORT_PATH/bin/* $CIRCLE_ARTIFACTS
             - rm $CIRCLE_ARTIFACTS/$CIRCLE_PROJECT_REPONAME
-            - for i in */; do cd $CIRCLE_ARTIFACTS/${i%/}; zip ${i%/}.zip *; mv ${i%/}.zip ../; done:
-                pwd: $CIRCLE_ARTIFACTS
             - go get github.com/tcnksm/ghr
             - ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` $CIRCLE_ARTIFACTS/
